--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Polynate - AI-powered text and audio content generation platform"
     />
+    <meta name="keywords" content="AI, content generation, text generation, audio generation, polynate" />
+    <meta name="author" content="Polynate" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
